# ATIC

./: .gitignore  TaskDistribution.md  adversarial_agent.py  controller.py  data_analysis.ipynb  data_analysis.py  data_generator.py  kalman_filter.py  main.py  multirun_results.csv  output.csv  pyproject.toml  steady_state_opinions.csv  testing.ipynb  utils.py
conf/: config.yaml
