[tool.poetry]
name = "atic"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
numpy = "^2.2.6"
hydra-core = "^1.3.2"
pykalman = "^0.10.1"
matplotlib = "^3.10.3"
pandas = "^2.3.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
